# morocco-healthcare-optimization

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
.streamlit/: config.toml
data/boundaries/: morocco_boundary.geojson
data/processed/: facilities.geojson  popgrid.geojson  scenario_results.json
docs/: SAFETY.md
scripts/: fetch_osm_facilities.py
src/: __init__.py  access_metrics.py  data_prep.py  facility_locator.py  kmeans_placement.py  scenario_simulator.py  spatial_utils.py  triage_engine.py
tests/: test_access_metrics.py  test_data_prep.py  test_optimization.py  test_phase0_smoke.py  test_scenario_spatial.py  test_triage_engine.py
webapp/: streamlit_app.py
webapp/pages/: triage_bot.py
