[project]
name = "morocco-healthcare-optimization"
version = "0.1.0"
description = "Geospatial healthcare access analysis and optimization for Morocco"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["gis", "healthcare", "public-health", "geospatial", "morocco", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: GIS",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.flake8]
max-line-length = 100
exclude = [".venv", "__pycache__", "build", "dist"]
ignore = ["E203", "W503"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"
